--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ mkdocs==1.1
 mkdocs-exclude==1.0.2
 mkdocs-material==5.1.3
 #mkpdfs-mkdocs==1.0.1
-git+https://github.com/jwaschkau/mkpdfs-mkdocs-plugin.git@fix/string-types
+# git+https://github.com/jwaschkau/mkpdfs-mkdocs-plugin.git@fix/string-types
 mkdocs-git-revision-date-localized-plugin==0.5.0
 
