--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,8 @@
     <description>Provides Protocol Support for MultiVersion in Geyser</description>
     <properties>
         <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -48,8 +50,8 @@
 
                 <configuration>
                     <!--                    <forceJavacCompilerUse>true</forceJavacCompilerUse>-->
-                    <source>11</source>
-                    <target>11</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
