--- a/geyser-reversion/pom.xml
+++ b/geyser-reversion/pom.xml
@@ -41,25 +41,25 @@
         <dependency>
             <groupId>au.com.grieve.reversion</groupId>
             <artifactId>translator-v390ee_to_v408be</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.0.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>au.com.grieve.reversion</groupId>
             <artifactId>common</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.0.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>au.com.grieve.reversion</groupId>
             <artifactId>edition-education</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.0.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>au.com.grieve.reversion</groupId>
             <artifactId>edition-bedrock</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.0.2</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
