--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <reversion.version>1.0.4</reversion.version>
     </properties>
 
     <build>
