Change default edition to 'bedrock'
Closes #3

--- a/geyser-reversion/src/main/resources/config.yml
+++ b/geyser-reversion/src/main/resources/config.yml
@@ -1,5 +1,5 @@
 # Edition supported. One of [bedrock, education]. Default: bedrock
-edition: education
+edition: bedrock
 
 # Don't touch
 version: 1
