Make use of new Reversion Library
Squashed commit of the following:

commit fd8415198a1786ab7c8ed370c7295536ac30f2bb
Author: bundabrg <bundabrg@grieve.com.au>
Date:   Fri Aug 28 11:07:28 2020 +0800

    Update Documents

commit 24f6f33148182ba1db0fabfb02ce5289bee51f82
Author: bundabrg <brendan@grieve.com.au>
Date:   Fri Aug 28 10:11:07 2020 +0800

    Bump to 1.0.6

commit 37c657924b115e00c004741ea9dfbbca079e9dc4
Author: bundabrg <brendan@grieve.com.au>
Date:   Thu Aug 27 18:39:04 2020 +0800

    Bump to 1.0.5

commit f9597241578d1e3fd391b8364d40e6bdd6d42be5
Author: bundabrg <bundabrg@grieve.com.au>
Date:   Thu Aug 27 17:41:25 2020 +0800

    Initial v412

commit 05210fe8caa889b243235a2eb31e11c9c7ead71d
Author: bundabrg <brendan@grieve.com.au>
Date:   Thu Aug 27 10:38:09 2020 +0800

    Add back education support

commit 206016937cfc038e6c93baffcc2deebc811f7a4c
Author: bundabrg <bundabrg@grieve.com.au>
Date:   Wed Aug 26 19:29:03 2020 +0800

    Use new Reversion

--- a/geyser-reversion/pom.xml
+++ b/geyser-reversion/pom.xml
@@ -58,6 +58,12 @@
         </dependency>
         <dependency>
             <groupId>au.com.grieve.reversion</groupId>
+            <artifactId>translator-v412be_to_v411be</artifactId>
+            <version>${reversion.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>au.com.grieve.reversion</groupId>
             <artifactId>common</artifactId>
             <version>${reversion.version}</version>
             <scope>compile</scope>
@@ -72,6 +78,32 @@
             <groupId>au.com.grieve.reversion</groupId>
             <artifactId>edition-bedrock</artifactId>
             <version>${reversion.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- Protocol Stuff -->
+        <dependency>
+            <groupId>com.nukkitx.protocol</groupId>
+            <artifactId>education-v390</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.nukkitx.protocol</groupId>
+            <artifactId>bedrock-v409</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.nukkitx.protocol</groupId>
+            <artifactId>bedrock-v411</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.nukkitx.protocol</groupId>
+            <artifactId>bedrock-v412</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
@@ -90,20 +122,42 @@
                         <goals>
                             <goal>shade</goal>
                         </goals>
+                        <configuration>
+                            <artifactSet>
+                                <includes>
+                                    <include>au.com.grieve.reversion:*</include>
+                                    <include>com.nukkitx.protocol:education-v390</include>
+                                    <include>com.nukkitx.protocol:bedrock-v409</include>
+                                    <include>com.nukkitx.protocol:bedrock-v411</include>
+                                    <include>com.nukkitx.protocol:bedrock-v412</include>
+                                </includes>
+                            </artifactSet>
+                        </configuration>
                     </execution>
                 </executions>
                 <configuration>
-                    <!--                <relocations>-->
-                    <!--                    <relocation>-->
-                    <!--                        <pattern>com.nukkitx.protocol.bedrock.v363</pattern>-->
-                    <!--                        <shadedPattern>${project.groupId}.${project.artifactId}.v363</shadedPattern>-->
-                    <!--                    </relocation>-->
-                    <!--                </relocations>-->
-                    <artifactSet>
-                        <excludes>
-                            <exclude>it.unimi.dsi.fastutil:*</exclude>
-                        </excludes>
-                    </artifactSet>
+                    <relocations>
+                        <relocation>
+                            <pattern>com.nukkitx.protocol.education.v390</pattern>
+                            <shadedPattern>${project.groupId}.${project.artifactId}.nukkitx.protocol.education.v390
+                            </shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>com.nukkitx.protocol.bedrock.v409</pattern>
+                            <shadedPattern>${project.groupId}.${project.artifactId}.nukkitx.protocol.bedrock.v409
+                            </shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>com.nukkitx.protocol.bedrock.v411</pattern>
+                            <shadedPattern>${project.groupId}.${project.artifactId}.nukkitx.protocol.bedrock.v411
+                            </shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>com.nukkitx.protocol.bedrock.v412</pattern>
+                            <shadedPattern>${project.groupId}.${project.artifactId}.nukkitx.protocol.bedrock.v412
+                            </shadedPattern>
+                        </relocation>
+                    </relocations>
                 </configuration>
             </plugin>
         </plugins>
