Move from Plugin to Extension
Squashed commit of the following:

commit 7758500a5e4d528ac1fa51faa80fac515427dd38
Author: bundabrg <bundabrg@grieve.com.au>
Date:   Sun Aug 30 13:27:42 2020 +0800

    Update Build

commit 9c8b0e818aeb5a79d3cf82d65506351218023189
Author: bundabrg <bundabrg@grieve.com.au>
Date:   Sun Aug 30 13:16:09 2020 +0800

    Move from GeyserPlugin to GeyserExtension

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,13 +37,13 @@ jobs:
           # Set Maven Version
           mvn -B versions:set -DnewVersion=${MAVEN_VERSION}
 
-          # Set Plugin Version
-          sed -i "/version = .*/ s/version = \"[^\"]*\"/version = \"${MAVEN_VERSION}\"/" geyser-reversion/src/main/java/au/com/grieve/geyser/reversion/GeyserReversionPlugin.java
+          # Set Extension Version
+          sed -i "/version = .*/ s/version = \"[^\"]*\"/version = \"${MAVEN_VERSION}\"/" geyser-reversion/src/main/java/au/com/grieve/geyser/reversion/GeyserReversionExtension.java
 
       - name: Update Version for Developmental Build
         if: "!startsWith(github.ref,'refs/tags/v')"
         run: |
-          sed -i "/version = .*/ s/-dev/-b${GITHUB_RUN_NUMBER}/" geyser-reversion/src/main/java/au/com/grieve/geyser/reversion/GeyserReversionPlugin.java
+          sed -i "/version = .*/ s/-dev/-b${GITHUB_RUN_NUMBER}/" geyser-reversion/src/main/java/au/com/grieve/geyser/reversion/GeyserReversionExtension.java
 
       - name: Build with Maven
         run: |
