--- a/geyser-reversion/pom.xml
+++ b/geyser-reversion/pom.xml
@@ -100,8 +100,26 @@
                             <artifactSet>
                                 <includes>
                                     <include>au.com.grieve.reversion:*</include>
+                                    <include>com.nukkitx.protocol:*</include>
                                 </includes>
                             </artifactSet>
+                            <relocations>
+                                <relocation>
+                                    <pattern>com.nukkitx.protocol.bedrock</pattern>
+                                    <shadedPattern>au.com.grieve.geyser.reversion.shaded.nukkitx.protocol.bedrock
+                                    </shadedPattern>
+                                    <excludes>
+                                        <!--                                        <exclude>com.nukkitx.protocol.bedrock.BedrockServer</exclude>-->
+                                        <!--                                        <exclude>com.nukkitx.protocol.bedrock.BedrockServerSession</exclude>-->
+                                        <!--                                        <exclude>com.nukkitx.protocol.bedrock.BedrockServerEventHandler</exclude>-->
+                                        <!--                                        <exclude>com.nukkitx.protocol.bedrock.BedrockPong</exclude>-->
+                                        <!--                                        <exclude>com.nukkitx.protocol.bedrock.BedrockWrapperSerializer</exclude>-->
+                                        <!--                                        <exclude>com.nukkitx.protocol.bedrock.BedrockPacketCodec$1</exclude>-->
+                                        <!--                                        <exclude>com.nukkitx.protocol.bedrock.BedrockPacketCodec$Builder</exclude>-->
+                                        <!--                                        <exclude>com.nukkitx.protocol.bedrock.BedrockPacketHelper</exclude>-->
+                                    </excludes>
+                                </relocation>
+                            </relocations>
                         </configuration>
                     </execution>
                 </executions>
