Fix Build Notification

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -142,7 +142,8 @@ jobs:
             -F - \
             "$tag_name" << EOF
           Release $tag_name
-          $(git log HEAD^..HEAD --pretty=format:'# %s%n%n%b')
+
+          # $(git log HEAD^..HEAD --pretty=format:'%s%n%n%b')
 
           [Online Documentation](https://bundabrg.github.io/GeyserReversion)
 
